--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="images/logo.png" alt="logo">
+        <nav class="font-lato">
+            <ul class="nav-ul">
+                <li> 
+                    <a href="index.html">HOME</a>
+                </li>
+                <li>
+                    <a href="#">PORTFOLIO</a>
+                </li>
+                <li>
+                    <a href="#">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#">BLOG</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
