Add section one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="logo">
+        <a href="index.html">
+            <img src="images/logo.png" alt="logo">
+        </a>
         <nav class="font-lato">
             <ul class="nav-ul">
                 <li> 
@@ -32,5 +34,20 @@
             </ul>
         </nav>
     </header>
+    <section class="top-section">
+        <div class="top-section-left font-lato">
+            <p>
+            Provide You best Best Ui Service
+            </p>
+            <p>
+                Mobile App Design and Development Studio. You can hire us
+            </p>
+            <div class="button">
+                <img class="wave" src="images/wave-me.png" alt="wave-image">
+                <p>wave me</p>
+            </div>
+        </div>
+        <img src="images/pair.png" alt="working-pair-image">
+    </section>
 </body>
 </html>
